--- a/mappage.html
+++ b/mappage.html
@@ -3,35 +3,55 @@
   <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       media="screen"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css"
-    />
+    /> -->
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
-    <div id="map"></div>
-    <div class="container">
-      <h4 class="subtitle">Search Country:</h4>
-      <input
-        type="text"
-        id="searchCountry"
-        class="input search-box"
-        placeholder="Type country name..."
-      />
-      <div class="match-list" id="matchList"></div>
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+          <div class="inner">
+              <h3 class="masthead-brand">Global <span class="snakeColor">Snake</span></h3>
+              <nav class="nav nav-masthead justify-content-center">
+                  <a class="nav-link active" href="#">Home</a>
+                  <!-- <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="#">Contact</a> -->
+              </nav>
+          </div>
+      </header>
+  <div>
+    <!-- Hero -->
+  <div class="jumbotron text-center">
+    <h2 class="">Welcome to</h2>
+    <h1 id="countryName"></h1>
+  </div>
+  <!-- main -->
+  <div class="form-group">
+    <form>
+        <input id="searchCountry" class="form-control my-sm-3" type="search" placeholder="Search" aria-label="Search">
+        <div class="match-list" id="matchList"></div>
+        <button id="submitButton" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+  <main>
+    <div class="container-fluid">
+      <div class="row">
+      <div class="col-sm"><img id="flag" class="flag" src = "" /></div>
+      <div id="data-list" class="col-sm">
+          <p id="countryName"></p>
+          <ul id="output">
+              
+          </ul>
+      </div>
     </div>
-    <button class="button is-success" id="submitButton">Search Country</button>
-    <img id="flag" src = "" />
-    <div id="data-list">
-        <p id="countryName"></p>
-        <ul id="output">
-            
-        </ul>
     </div>
+    <div id="map" class="map"></div>
+  </main>
   </body>
   <script
     defer
