Day 2 Baseline working

--- a/mappage.html
+++ b/mappage.html
@@ -67,6 +67,6 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjfsBIH4TwxsEDAV-nFdUdL0UJySGp5AM&callback=initMap"
   ></script>
   <script src="js/get.js"></script>
-  <script src="js/index.js"></script>
+   <script src="js/mappage.js"></script>
   
 </html>
