--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </nav>
                 </div>
             </header>
-            <div class="cover-container container-fluid jumbotron2 text-center">
+            <div class="jumbotron">
                 <p class="lead">We <span class="snakeColor">Snake</span> the Glode to find the info you need on the countries of the world!</p>
             </div>
             <main role="main" class="inner cover">
