--- a/about-us.html
+++ b/about-us.html
@@ -15,9 +15,9 @@
                 <div class="inner">
                     <h3 class="masthead-brand">Global <span class="snakeColor">Snake</span></h3>
                     <nav class="nav nav-masthead justify-content-center">
-                        <a class="nav-link active" href="/FrontEnd/TeamHTownProject/index.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                         <a class="nav-link" data-toggle="modal" data-target="#staticBackdrop">Features</a>
-                        <a class="nav-link " href="#">About Us</a>
+                        <a class="nav-link " href="about-us.html">About Us</a>
                     </nav>
                 </div>
             </header>
