--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <!-- <link rel="stylesheet" type="text/css" media="screen" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css"/> -->
         <link rel="stylesheet" href="css/index.css">
-        
+        <link rel="shortcut icon"tra href="favicon.ico"/>
+
     </head>
     <body class="text-center" data-gr-c-s-loaded="true">
         <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -15,14 +16,14 @@
                 <div class="inner">
                     <h3 class="masthead-brand">Global <span class="snakeColor">Snake</span></h3>
                     <nav class="nav nav-masthead justify-content-center">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                         <a class="nav-link" data-toggle="modal" data-target="#staticBackdrop">Features</a>
-                        <a class="nav-link " href="/FrontEnd/TeamHTownProject/about-us.html">About Us</a>
+                        <a class="nav-link " href="about_us.html">About Us</a>
                     </nav>
                 </div>
             </header>
-            <div class="jumbotron">
-                <p class="lead">We <span class="snakeColor">Snake</span> the Glode to find the info you need on the countries of the world!</p>
+            <div class="jumbotron2">
+                <p class="lead">We <span class="snakeColor">Snake</span> the Globe to find the info you need on the countries of the world!</p>
             </div>
             <main role="main" class="inner cover">
                 <h1 class="cover-heading">Choose your desired location</h1>
