--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
             <footer class="mastfoot mt-auto">
                 <div class="inner">
-                    <p>Created with <a href="https://getbootstrap.com/">Bootstrap</a>, by Team H-Town</p>
+                    <p>Created with <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="about_us.html">Team H-Town</a></p>
                 </div>
             </footer>
         </div>
