bug fixes on HTML pages

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                     <nav class="nav nav-masthead justify-content-center">
                         <a class="nav-link active" href="index.html">Home</a>
                         <a class="nav-link" data-toggle="modal" data-target="#staticBackdrop">Features</a>
-                        <a class="nav-link " href="about-us.html">About Us</a>
+                        <a class="nav-link " href="about_us.html">About Us</a>
                     </nav>
                 </div>
             </header>
-            <div class="jumbotron">
+            <div class="jumbotron2">
                 <p class="lead">We <span class="snakeColor">Snake</span> the Glode to find the info you need on the countries of the world!</p>
             </div>
             <main role="main" class="inner cover">
