--- a/about_us.html
+++ b/about_us.html
@@ -17,7 +17,7 @@
     <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="masthead">
           <div class="inner">
-              <h3 class="masthead-brand">Global <span class="snakeColor">Snake</span></h3>
+              <a href="index.html"><h3 class="masthead-brand">Global <span class="snakeColor">Snake</span></h3></a>
               <nav class="nav nav-masthead justify-content-center">
                   <a class="nav-link active" href="index.html">Home</a>
                   <a class="nav-link" data-toggle="modal" data-target="#staticBackdrop">Features</a>
@@ -113,6 +113,9 @@
       </div>
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
   
 </html>
