--- a/about_us.html
+++ b/about_us.html
@@ -48,6 +48,9 @@
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/jmg5219">GitHub</a>
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://www.linkedin.com/in/jai-gokhale-81827747/">LinkedIn</a>
                     </div>
+                    <div>
+                      <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="jai-gokhale.html">Bio</a>
+                    </div>
               </div>
               <div class="col-lg-3 py-3">
                 <img class="img-thumbnail rounded-circle" src="/images/Headshots/Luke_Brazil.png" />
@@ -57,6 +60,9 @@
                   <div class="d-inline-flex">
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/LukeBrazil">GitHub</a>
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://www.linkedin.com/in/luke-brazil-0506b71b0/">LinkedIn</a>
+                  </div>
+                  <div>
+                    <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="luke-brazil.html">Bio</a>
                   </div>
               </div>
               <div class="col-lg-3 py-3">
@@ -68,15 +74,21 @@
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/rynoschni">GitHub</a>
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://github.com/rynoschni">LinkedIn</a>
                     </div>
+                    <div>
+                      <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="ryan-schniederjan.html">Bio</a>
+                    </div>
               </div>
               <div class="col-lg-3 py-3">
                 <img class="img-thumbnail rounded-circle" src="/images/Headshots/Tait_Loughridge.jpg" />
                         <p class="bio"><span class="snakeColor">Name:</span> Tait Loughridge</p>
                         <p class="bio"><span class="snakeColor">Title:</span> Full Stack Developer</p>
-                        <p class="bio"><span class="snakeColor">Area of Interest:</span> HTML, CSS, Illustrator</p>
+                        <p class="bio"><span class="snakeColor">Area of Interest:</span> HTML, CSS, JavaScript, Illustrator</p>
                     <div class="d-inline-flex">
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/TaitLoughridge">GitHub</a>
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://www.linkedin.com/in/tait-loughridge-6a6026134/">LinkedIn</a>
+                    </div>
+                    <div>
+                      <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="tait-loughridge.html">Bio</a>
                     </div>
               </div>
           </div>
