Updated fringe cases and added some formatting

--- a/about_us.html
+++ b/about_us.html
@@ -48,7 +48,7 @@
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/jmg5219">GitHub</a>
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://www.linkedin.com/in/jai-gokhale-81827747/">LinkedIn</a>
                     </div>
-                    <div>
+                    <div class="biobtn py-2">
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="jai-gokhale.html">Bio</a>
                     </div>
               </div>
@@ -61,7 +61,7 @@
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/LukeBrazil">GitHub</a>
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://www.linkedin.com/in/luke-brazil-0506b71b0/">LinkedIn</a>
                   </div>
-                  <div>
+                  <div class="biobtn py-2">
                     <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="luke-brazil.html">Bio</a>
                   </div>
               </div>
@@ -74,7 +74,7 @@
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/rynoschni">GitHub</a>
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://github.com/rynoschni">LinkedIn</a>
                     </div>
-                    <div>
+                    <div class="biobtn py-2">
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="ryan-schniederjan.html">Bio</a>
                     </div>
               </div>
@@ -87,7 +87,7 @@
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/TaitLoughridge">GitHub</a>
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://www.linkedin.com/in/tait-loughridge-6a6026134/">LinkedIn</a>
                     </div>
-                    <div>
+                    <div class="biobtn py-2">
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="tait-loughridge.html">Bio</a>
                     </div>
               </div>
