End of day 3 - style and complex updates

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <!-- <link rel="stylesheet" type="text/css" media="screen" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css"/> -->
         <link rel="stylesheet" href="css/index.css">
+        <link rel="shortcut icon"tra href="favicon.ico"/>
         
     </head>
     <body class="text-center" data-gr-c-s-loaded="true">
