Toast and Tait changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <!-- <link rel="stylesheet" type="text/css" media="screen" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css"/> -->
         <link rel="stylesheet" href="css/index.css">
+        <link rel="shortcut icon"tra href="favicon.ico"/>
         
     </head>
     <body class="text-center" data-gr-c-s-loaded="true">
@@ -64,6 +65,20 @@
                     </div>
                 </div>
             </div>
+            <!-- Toast messages -->
+<div id="myToast" class="toast">
+    <div class="toast-header">
+        <!-- <img src="favicon.ico" class="rounded mr-2" alt=""> -->
+        <strong class="mr-auto">Global <span class="snakeColor">Snake</span> Alert</strong>
+        <small>11 mins ago</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div id="myToastBody" class="toast-body">
+    </div>
+</div>
+
     
             <footer class="mastfoot mt-auto">
                 <div class="inner">
