--- a/luke-brazil.html
+++ b/luke-brazil.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
         <!-- <link rel="stylesheet" type="text/css" media="screen" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css"/> -->
         <link rel="stylesheet" href="css/bio.css">
-        
+        <link rel="shortcut icon" href="favicon.ico"/>
     </head>
     <body class="text-center" data-gr-c-s-loaded="true">
         <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
