--- a/mappage.html
+++ b/mappage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/mappage.css" />
-    <link rel="shortcut icon"tra href="favicon.ico"/>
+    <link rel="shortcut icon" href="favicon.ico"/>
   </head>
   <body>
     <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
