--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
                     </div>
                 </div>
             </div>
+<!-- Toast messages -->
+<div id="myToast" class="toast">
+    <div class="toast-header">
+        <!-- <img src="favicon.ico" class="rounded mr-2" alt=""> -->
+        <strong class="mr-auto">Global <span class="snakeColor">Snake</span> Alert</strong>
+        <small>11 mins ago</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div id="myToastBody" class="toast-body">
+    </div>
+</div>
     
             <footer class="mastfoot mt-auto">
                 <div class="inner">
