--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="toast-header">
         <!-- <img src="favicon.ico" class="rounded mr-2" alt=""> -->
         <strong class="mr-auto">Global <span class="snakeColor">Snake</span> Alert</strong>
-        <small>11 mins ago</small>
+        <small id="toastTime"></small>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
         <span aria-hidden="true">&times;</span>
         </button>
