--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         </div>
                         <div class="modal-body">
                             <ol>
-                                <li class="p-2">Feature</li>
-                                <li class="p-2">Feature</li>
+                                <li class="p-2">Built with Bootstap 4 framework</li>
+                                <li class="p-2">   </li>
                             </ol>
                         </div>
                         <div class="modal-footer">
