--- a/ryan-schniederjan.html
+++ b/ryan-schniederjan.html
@@ -30,11 +30,11 @@
                 <h1>Ryan Schniederjan</h1>
                 <div class='bio_container'>
                     <p class="bio">
-                        about me
+                        I am a Full Stack Software Developer seeking a new career.  I attended DigitalCrafts immersive full stack web development program in July 2020.  Previously, I had a 16 year career as a Pathologists' Assistant with a demonstrated history of working in the hospital & health care industry and skilled in Laboratory Medicine, Healthcare Management, Healthcare, Medical Education, and Anatomic Pathology. I am a strong professional with a Master's degree as a Pathologists' Assistant from Quinnipiac University and a Full Stack Software Development education from DigitalCrafts. 
                     </p>
 
                     <p class="bio">
-                        about me
+                        I am also a freelance producer and video/audio editor.  I enjoy the outdoors and more extreme sports, like mountain biking and snow boarding.  When I am not coding, I spend my time doing carpentry, playing video games or playing with my dogs, Berkeley and Dallas.
                     </p>
                 </div>
             </main>
