--- a/luke-brazil.html
+++ b/luke-brazil.html
@@ -30,11 +30,11 @@
                 <h1>Luke Brazil</h1>
                 <div class='bio_container'>
                     <p class="bio">
-                        about me
+                        Born and raised in Houston, Texas. I am a U.S. Army Infantry veteran (tour in Afghanistan) and developer in training. Since the end of my service I started my own video deposition small business and due to COVID it was time to make a permanent career switch.
                     </p>
 
                     <p class="bio">
-                        about me
+                        
                 </div>
             </main>
             
@@ -51,8 +51,10 @@
                         </div>
                         <div class="modal-body">
                             <ol>
-                                <li class="p-2">Feature</li>
-                                <li class="p-2">Feature</li>
+                                <li class="p-2"><span class="snakeColor"><strong>Snake Intel:</strong></span> info on country</li>
+                                <li class="p-2"><span class="snakeColor"><strong>Snake Vision:</strong></span> maps and pictures</li>
+                                <li class="p-2"><span class="snakeColor"><strong>Snake Sense:</strong></span> weather in the capital</li>
+                                <li class="p-2"><span class="snakeColor"><strong>Random Snake:</strong></span> randomly search on countries</li>
                             </ol>
                         </div>
                         <div class="modal-footer">
