--- a/tait-loughridge.html
+++ b/tait-loughridge.html
@@ -30,11 +30,14 @@
                 <h1>Tait Loughridge</h1>
                 <div class='bio_container'>
                     <p class="bio">
-                        I have an art degree from the University of Houston. My plan was to be an art teacher but that turned into a job with an oil and gas company before I even finished my degree. I still pursue my love of art today, just more as a hobby. (The image above is a bust I made and my self while taking a workshop at the MFAH Glassell School of Art)
+                        I have an art degree from the University of Houston. My plan was to be an art teacher but that turned into a job with oil and gas. I still pursue my love of art today, just more as a hobby.
                     </p>
 
                     <p class="bio">
-                        I have worked in oil and gas for over two years, but after getting laid off due to COVID I decided to make the switch to something more stable. My husband completed the flex program last year and has been encouraging me to do the same.
+                        I have worked in oil and gas for over two years, but after getting laid off due to COVID I decided to make the switch to be a Software Engineer.
+                    </p>
+                    <p class="bio">
+                        I am now using my background in art for UI and UX design.
                     </p>
                 </div>
             </main>
@@ -52,8 +55,10 @@
                         </div>
                         <div class="modal-body">
                             <ol>
-                                <li class="p-2">Feature</li>
-                                <li class="p-2">Feature</li>
+                                <li class="p-2"><span class="snakeColor"><strong>Snake Intel:</strong></span> info on country</li>
+                                <li class="p-2"><span class="snakeColor"><strong>Snake Vision:</strong></span> maps and pictures</li>
+                                <li class="p-2"><span class="snakeColor"><strong>Snake Sense:</strong></span> weather in the capital</li>
+                                <li class="p-2"><span class="snakeColor"><strong>Random Snake:</strong></span> randomly search on countries</li>
                             </ol>
                         </div>
                         <div class="modal-footer">
