Fixed search box flex and spelling.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             
             <div class="jumbotron2">
-                <p class="lead">We <span class="snakeColor">Snake</span> the Glode to kickstart your travel!</p>
+                <p class="lead">We <span class="snakeColor">Snake</span> the Globe to kickstart your travel!</p>
             </div>
             <main role="main" class="inner cover">
                 <h1 class="cover-heading">Enter your desired country</h1>
