--- a/mappage.html
+++ b/mappage.html
@@ -19,8 +19,10 @@
           <h3 class="masthead-brand">Global <span class="snakeColor">Snake</span></h3>
         </a>
         <nav class="nav nav-masthead justify-content-center">
-          <input id="anotherCountry" class="form-control mr-4 searchHead" type="text" placeholder="Snake Another?" aria-label="Search">
-          <button id="submitButton" class="btn btn-outline-success my-2 mr-4 my-sm-0" type="submit">Search</button>
+          <form class="searchHead mr-4 justify-content-center">
+          <input id="anotherCountry" class="form-control mr-2 searchHead" type="text" placeholder="Snake Another?" aria-label="Search">
+          <button id="submitButton" class="btn btn-outline-success mx-2 mx-sm-1" type="submit">Search</button>
+          </form>
             <a class="nav-link active" href="index.html">Home</a>
             <a class="nav-link" data-toggle="modal" data-target="#staticBackdrop">Features</a>
             <a class="nav-link" href="about_us.html">About Us</a>
