assign global variable to functions. Add comments

--- a/jai-gokhale.html
+++ b/jai-gokhale.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/bio.css">
         <link rel="shortcut icon"tra href="favicon.ico"/>
     </head>
+    <!-- Header Menu  -->
     <body class="text-center" data-gr-c-s-loaded="true">
         <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
             <header class="masthead">
@@ -23,7 +24,7 @@
                 </div>
             </header>
 
-                        <main role="main" class="inner cover">
+            <main role="main" class="inner cover">
                 
                 <img class="profile" src="images/Headshots/Jai_Gokhale.png" alt="Jai Gokhale">
 
