--- a/ryan-schniederjan.html
+++ b/ryan-schniederjan.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/bio.css">
         <link rel="shortcut icon"tra href="favicon.ico"/>
     </head>
+<!-- Header Menu  -->
     <body class="text-center" data-gr-c-s-loaded="true">
         <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
             <header class="masthead">
@@ -22,7 +23,7 @@
                     </nav>
                 </div>
             </header>
-
+<!-- Bio Info -->
             <main role="main" class="inner cover">
                 
                 <img class="profile" src="images/Headshots/Ryan_Schniederjan.jpg" alt="image of tait loughridge posing with a ceramic bust of his creation">
